[tool.poetry]
name = "py-diff"
version = "0.1.0"
description = ""
authors = ["AsavaAsava <wayne.majani@hotmail.com>"]
readme = "README.md"
packages = [{include = "py_diff"}]

[tool.poetry.scripts]
py-diff = "py_diff.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.7.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
